maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:25: error: ':' expected but ')' found.
  def keepHandOnSideWall(etat ) = Int {
                              ^IslandMaze:48: error: identifier expected but '}' found.
} 
^