maze.island.IslandMaze.scala.code
override def run() {
  
  var etat = 0;
  
  def avanceVersNord () {
    
    setDirection(Direction.NORTH)
    while (estFaceMur() == false) {
      avance();
    }
   
  }
  
  def suitAGauche() {
    
   	gauche();
    while (estFaceMur() == true) {
      droite();
    }
    avance();
    
  }
  
  def keepHandOnSideWall(etat ) = Int {
    
    etat match {
      
      case 0 => avanceVersNord(); etat = 1;
      
      case 1 => suitAGauche(); etat = 0;
      
      case _ => println("Ce cas ne devrait pas arriver. Corrigez le problème SVP. ");
         
    }
    
    return etat
    
  }
  
  while (estSurBiscuit == false) {
    etat = keepHandOnSideWall(etat);
  }
  
	prendBiscuit();

  
}